@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.19 version.
 
 0.03 2015-11-05T11:58:07+01:00
  - Update Curses::UI::Number to 0.06 version.
